<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <com.lenovo.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            app:min="1"
            app:units="%" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gestures"
        android:title="@string/gestures_title">

        <com.lenovo.parts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:key="dt2w"
            android:dialogTitle="@string/dt2w_dialog"
            android:entries="@array/dt2w_entries"
            android:entryValues="@array/dt2w_values"
            android:summary="%s"
            android:title="@string/dt2w_title"
            android:icon="@drawable/ic_dt2w" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:summary="@string/device_kcal_suammary"
            android:title="@string/device_kcal_title"
            android:icon="@drawable/ic_color">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.lenovo.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.lenovo.parts.kcal" />
        </Preference>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <com.lenovo.parts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="dirac_enabled"
            android:summary="@string/dirac_summary"
            android:title="@string/dirac_title"
            android:icon="@drawable/ic_dirac" />

        <com.lenovo.parts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_headset_pref_entries"
            android:entryValues="@array/dirac_headset_pref_values"
            android:key="dirac_headset_pref"
            android:summary="%s"
            android:title="@string/dirac_headset_title"
            android:icon="@drawable/ic_headphones" />

        <com.lenovo.parts.preferences.SecureSettingListPreference
            android:defaultValue="0,0,0,0,0,0,0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_preset_pref_entries"
            android:entryValues="@array/dirac_preset_pref_values"
            android:key="dirac_preset_pref"
            android:summary="%s"
            android:title="@string/dirac_preset_title"
            android:icon="@drawable/ic_preset" />

        <com.lenovo.parts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />

        <com.lenovo.parts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="3"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb"
        android:title="@string/usb_fastcharge_title">

        <com.lenovo.parts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="usbfastcharge"
            android:summary="@string/fastcharge_summary"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb" />

    </PreferenceCategory>

</PreferenceScreen>
